# mgloria

./: .gitignore  CMakeLists.txt  README.md
cmake/: CUDA.cmake
doc/: The-Design.md  The-dot-gemm.md
doc/tutorial/: trivial.md
doc/tutorial/cpp-things/: Aligned-Malloc.md  Expression-Template.md
mgloria/: CMakeLists.txt  README.md  complex_eval.hpp  core.hpp  data_layout.hpp  data_type.hpp  depends.hpp  expr_eval.hpp  expression.hpp  prepare.hpp  prepare_op.hpp  runtime_check.hpp  stream_gpu.hpp  tensor.hpp  tensor_cpu.hpp  tensor_gpu.hpp  tensor_shape.hpp  tensor_stream.hpp
mgloria-ps/: CMakeLists.txt
mgloria/cuda/: tensor_gpu.cuh  tensor_utils.cuh
mgloria/op/: __op_cpu.hpp  __op_gemm_cpu.hpp
mgloria/vectorization/: __vec_mm.hpp  __vec_none.hpp  __vec_prepare.hpp  __vec_sse.hpp  veced_op.hpp
mgloria_ps/: CMakeLists.txt
script/: README.md  install_CUDA11.7_Ubuntu2004.sh  install_CUDA11_7_WSL2.sh  install_intel_mkl.sh
test/: CMakeLists.txt  main-test.cpp
test/tensor/: basic_op_test.hpp  shape_test.hpp
